--- a/catalog.html
+++ b/catalog.html
@@ -129,7 +129,7 @@
             <p class="hotel-count">Найдено гостиниц:
               <span class="hotel-count-number">38</span>
             </p>
-            <div class="sorting-type">
+            <div class="select sorting-type">
               <select class="select-control" aria-label="Сортировка">
                 <option value="cheap">Сначала дешевые</option>
                 <option value="expensive">Сначала дорогие</option>
@@ -240,13 +240,14 @@
       <div class="page-footer-container">
         <section class="newsletter">
           <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-          <p class="newsletter-description newsletter-description-catalog">Только полезная информация и никакого спама,
-            честное бойскаутское!</p>
-          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="newsletter-email">Email</label>
-            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
-              required>
-            <button class="button newsletter-button" type="submit">Подписаться</button>
+          <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <div class="newsletter-wrapper">
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label class="visually-hidden" for="newsletter-email">Email</label>
+              <input class="newsletter-field" placeholder="Ваш e-mail" type="email" name="newsletter-email"
+                id="newsletter-email" required>
+              <button class="button newsletter-button" type="submit">Подписаться</button>
+          </div>
           </form>
         </section>
 
