--- a/index.html
+++ b/index.html
@@ -138,11 +138,13 @@
         <section class="newsletter newsletter-bg">
           <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
           <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="newsletter-email">Email</label>
-            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
-              required>
-            <button class="button newsletter-button" type="submit">Подписаться</button>
+          <div class="newsletter-wrapper">
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label class="visually-hidden" for="newsletter-email">Email</label>
+              <input class="newsletter-field" placeholder="Ваш e-mail" type="email" name="newsletter-email"
+                id="newsletter-email" required>
+              <button class="button newsletter-button" type="submit">Подписаться</button>
+          </div>
           </form>
         </section>
 
@@ -195,7 +197,8 @@
     </footer>
 
     <!-- модальное окно -->
-    <div class="modal-container">
+
+    <!-- <div class="modal-container">
       <div class="modal modal-search">
         <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
@@ -205,61 +208,70 @@
           <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="field-group">
               <label class="modal-form arrival-form" for="modal-arrival">Дата заезда:</label>
-              <input class="field arrival-form-field " type="text" id="modal-arrival" name="modal-arrival"
+              <input class="modal-field arrival-form-field " type="text" id="modal-arrival" name="modal-arrival"
                 placeholder="Укажите дату" value="27 апреля 2020">
-              <span class="modal-text modal-text-error">Мы не можем отправить вас в прошлое.</span>
             </p>
+            <span class="modal-text modal-text-error">Мы не можем отправить вас в прошлое.</span>
             <p class="field-group">
               <label class="modal-form departure-form" for="modal-departure">Дата выезда:</label>
-              <input class="field departure-form-field" type="text" id="modal-departure" name="modal-departure"
+              <input class="modal-field departure-form-field" type="text" id="modal-departure" name="modal-departure"
                 placeholder="Укажите дату" value="1 сентября 2021">
-              <span class="modal-text">На эти даты есть свободные номера. Пока есть.</span>
             </p>
+            <span class="modal-text">На эти даты есть свободные номера. Пока есть.</span>
 
             <div class="field-group-count">
               <label class="modal-form adult-form" for="modal-adults">Взрослые:</label>
               <span class="field-box">
                 <button class="field-button" type="button">
-                  <svg class="button-minus" aria-hidden="true" focusable="false" width="14" height="2"
-                    viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0v2h14V0H0Z" fill="currentColor" fill-opacity="1" /></svg>
+                  <div class="button-wrapper">
+                    <svg class="button-minus" aria-hidden="true" focusable="false" width="14" height="2"
+                      viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0v2h14V0H0Z" fill="currentColor" fill-opacity="1" /></svg>
+                  </div>
                 </button>
                 <input class="field-number" type="number" id="modal-adults" name="modal-adults" value="2">
                 <button class="field-button button-plus" type="button">
-                  <svg class="button-plus" aria-hidden="true" focusable="false" width="14" height="14"
-                    viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="currentColor" fill-opacity="1" /></svg>
+                  <div class="button-wrapper">
+                    <svg class="button-plus" aria-hidden="true" focusable="false" width="14" height="14"
+                      viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="currentColor" fill-opacity="1" /></svg>
+                  </div>
                 </button>
               </span>
 
               <span class="modal-form child-form">
-                <label class="modal-form child-form form-text" for="modal-adults">Дети:</label>
+                <label class="modal-form child-form form-text" for="modal-child">Дети:</label>
                 <span class="tooltip">
                   <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date"></button>
-                  <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18
+                  <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей, которые
+                    будут с вами, возраст которых от 6 до 18
                     лет. Дети до 6 лет размещаются бесплатно.</span>
                 </span>
               </span>
 
               <span class="field-box">
                 <button class="field-button button-minus" type="button">
-                  <svg class="button-minus" aria-hidden="true" focusable="false" width="14" height="2"
-                    viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0v2h14V0H0Z" fill="currentColor" fill-opacity="1" /></svg>
+                  <div class="button-wrapper">
+                    <svg class="button-minus" aria-hidden="true" focusable="false" width="14" height="2"
+                      viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0v2h14V0H0Z" fill="currentColor" fill-opacity="1" /></svg>
+                  </div>
                 </button>
                 <input class="field-number" type="number" id="modal-child" name="modal-child" value="2">
                 <button class="field-button button-plus" type="button">
-                  <svg class="button-plus" aria-hidden="true" focusable="false" width="14" height="14"
-                    viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="currentColor" fill-opacity="1" /></svg>
+                  <div class="button-wrapper">
+                    <svg class="button-plus" aria-hidden="true" focusable="false" width="14" height="14"
+                      viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="currentColor" fill-opacity="1" /></svg>
+                  </div>
                 </button>
               </span>
             </div>
-            <button class="button button-search" type="button">Найти</button>
+            <button class="button button-modal-search" type="button">Найти</button>
           </form>
         </section>
       </div>
-    </div>
+    </div> -->
 
   </body>
 
