--- a/catalog.html
+++ b/catalog.html
@@ -73,9 +73,10 @@
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="visually-hidden control-input" type="checkbox" id="swimming-pool" name="swimming-pool" checked>
-                        <span class="control-mark"></span>
-                        <span class="control-label">Бассейн</span>
+                      <input class="visually-hidden control-input" type="checkbox" id="swimming-pool"
+                        name="swimming-pool" checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Бассейн</span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
@@ -100,8 +101,7 @@
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="visually-hidden control-input" type="radio" name="product-group" value="hotel"
-                        checked>
+                      <input class="visually-hidden control-input" type="radio" name="product-group" value="hotel">
                       <span class="control-mark"></span>
                       <span class="control-label">Гостиница</span>
                     </label>
@@ -141,10 +141,10 @@
 
                   <div class="range-scale">
                     <div class="range-bar" style="width: 226px">
-                      <button class="range-toggle toggle-min">
+                      <button class="range-toggle toggle-min" type="button">
                         <span class="visually-hidden">Изменить минимальную цену.</span>
                       </button>
-                      <button class="range-toggle toggle-max">
+                      <button class="range-toggle toggle-max" type="button">
                         <span class="visually-hidden">Изменить максимальную цену.</span>
                       </button>
                     </div>
@@ -281,8 +281,8 @@
           <div class="newsletter-wrapper">
             <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden" for="newsletter-email">Email</label>
-              <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email"
-                id="newsletter-email" required>
+              <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+                required>
               <button class="button newsletter-button" type="submit">Подписаться</button>
             </form>
           </div>
