--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
           <div class="newsletter-wrapper">
             <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden" for="newsletter-email">Email</label>
-              <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email"
-                id="newsletter-email" required>
+              <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+                required>
               <button class="button newsletter-button" type="submit">Подписаться</button>
             </form>
           </div>
@@ -199,7 +199,7 @@
 
     <!-- модальное окно -->
 
-    <div class="modal-container">
+    <div class="modal-container modal-container-close">
       <div class="modal modal-search">
         <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
@@ -209,14 +209,14 @@
           <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="field-group">
               <label class="modal-form" for="modal-arrival">Дата заезда:</label>
-              <input class="field" type="text" id="modal-arrival" name="modal-arrival"
-                placeholder="Укажите дату" value="27 апреля 2020">
+              <input class="field" type="text" id="modal-arrival" name="modal-arrival" placeholder="Укажите дату"
+                value="27 апреля 2020">
             </p>
             <span class="modal-text modal-text-error">Мы не можем отправить вас в прошлое.</span>
             <p class="field-group">
               <label class="modal-form" for="modal-departure">Дата выезда:</label>
-              <input class="field" type="text" id="modal-departure" name="modal-departure"
-                placeholder="Укажите дату" value="1 сентября 2021">
+              <input class="field" type="text" id="modal-departure" name="modal-departure" placeholder="Укажите дату"
+                value="1 сентября 2021">
             </p>
             <span class="modal-text">На эти даты есть свободные номера. Пока есть.</span>
 
@@ -224,19 +224,17 @@
               <label class="modal-form adult-form" for="modal-adults">Взрослые:</label>
               <span class="field-box">
                 <button class="field-button" type="button">
-                  <div class="button-wrapper">
-                    <svg class="button-minus" aria-hidden="true" focusable="false" width="14" height="2"
-                      viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0v2h14V0H0Z" fill="currentColor" fill-opacity="1" /></svg>
-                  </div>
+                  <span class="visually-hidden">Минус</span>
+                  <svg class="button-minus" aria-hidden="true" focusable="false" width="14" height="2"
+                    viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0v2h14V0H0Z" fill="currentColor" fill-opacity="1" /></svg>
                 </button>
                 <input class="field-number" type="number" id="modal-adults" name="modal-adults" value="2">
                 <button class="field-button button-plus" type="button">
-                  <div class="button-wrapper">
+                  <span class="visually-hidden">Плюс</span>
                     <svg class="button-plus" aria-hidden="true" focusable="false" width="14" height="14"
                       viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="currentColor" fill-opacity="1" /></svg>
-                  </div>
                 </button>
               </span>
 
@@ -252,23 +250,22 @@
 
               <span class="field-box">
                 <button class="field-button button-minus" type="button">
-                  <div class="button-wrapper">
+                  <span class="visually-hidden">Минус</span>
                     <svg class="button-minus" aria-hidden="true" focusable="false" width="14" height="2"
                       viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0v2h14V0H0Z" fill="currentColor" fill-opacity="1" /></svg>
-                  </div>
                 </button>
                 <input class="field-number" type="number" id="modal-child" name="modal-child" value="2">
                 <button class="field-button button-plus" type="button">
-                  <div class="button-wrapper">
+                  <span class="visually-hidden">Плюс</span>
                     <svg class="button-plus" aria-hidden="true" focusable="false" width="14" height="14"
                       viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="currentColor" fill-opacity="1" /></svg>
-                  </div>
+
                 </button>
               </span>
             </div>
-            <button class="button button-modal-search" type="button">Найти</button>
+            <button class="button button-modal-search" type="submit">Найти</button>
           </form>
         </section>
       </div>
