--- a/catalog.html
+++ b/catalog.html
@@ -293,7 +293,7 @@
           <h2 class="page-footer-social visually-hidden">Список соцсетей</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="button" href="https://vk.com/htmlacademy">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
                 <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
@@ -303,7 +303,7 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="https://t.me/htmlacademy ">
+              <a class="footer-social-link" href="https://t.me/htmlacademy ">
                 <svg class="footer-icon" aria-hidden="true" focusable="false" width="18" height="16" viewBox="0 0 19 16"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -313,7 +313,7 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
                 <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="18" viewBox="0 0 23 18"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
