--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
   </head>
 
   <body>
@@ -13,7 +15,7 @@
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
           <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
-            alt="Логотип города Седона">
+            alt="Логотип города Седона.">
         </a>
         <ul class="navigation-list navigation-menu">
           <li class="navigation-item">
@@ -196,7 +198,7 @@
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/catalog/hotel_amara.jpg" width="300" height="212"
-                  alt="Фотография вида из гостиницы Amara Resort & Spa">
+                  alt="Фотография вида из гостиницы Amara Resort & Spa.">
                 <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               </a>
               <span class="hotel-card-type">Гостиница</span>
@@ -209,7 +211,7 @@
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/catalog/hotel_villas.jpg" width="300" height="212"
-                  alt="Фотография вида из гостиницы Villas at Poco Diablo">
+                  alt="Фотография вида из гостиницы Villas at Poco Diablo.">
                 <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               </a>
               <span class="hotel-card-type">Гостиница</span>
@@ -222,7 +224,7 @@
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/catalog/hotel_desert_quail.jpg" width="300" height="212"
-                  alt="Фотография вида из гостиницы Desert Quail Inn">
+                  alt="Фотография вида из гостиницы Desert Quail Inn.">
                 <h3 class="hotel-card-title">Desert Quail Inn</h3>
               </a>
               <span class="hotel-card-type">Гостиница</span>
@@ -235,7 +237,7 @@
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/catalog/hotel_green_tree.jpg" width="300" height="212"
-                  alt="Фотография вида из гостиницы GreenTree Inn">
+                  alt="Фотография вида из гостиницы GreenTree Inn.">
                 <h3 class="hotel-card-title">GreenTree Inn</h3>
               </a>
               <span class="hotel-card-type">Гостиница</span>
@@ -302,6 +304,107 @@
                 <span class="visually-hidden">ВКонтакте</span>
               </a>
             </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="currentColor" /></svg>
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+
             <li class="footer-social-item">
               <a class="footer-social-link" href="https://t.me/htmlacademy ">
                 <svg class="footer-icon" aria-hidden="true" focusable="false" width="18" height="16" viewBox="0 0 19 16"
