--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
   </head>
 
   <body>
@@ -13,7 +15,7 @@
       <nav class="navigation">
         <a class="navigation-logo" href="#">
           <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
-            alt="Логотип города Седона">
+            alt="Логотип города Седона.">
         </a>
         <ul class="navigation-list navigation-menu">
           <li class="navigation-item">
@@ -72,7 +74,7 @@
                   течёт своя жизнь</p>
               </div>
               <img class="features-image" src="images/photo-sedona-city.jpg" width="800" height="384"
-                alt="Фотография города Седона">
+                alt="Фотография города Седона.">
             </li>
             <li class="features-item features-item-lt-grey">
               <div class="features-wrapper">
@@ -94,7 +96,7 @@
             </li>
             <li class="features-item features-item-blue">
               <img class="features-image" src="images/photo-devils-bridge.jpg" width="800" height="384"
-                alt="Фотография моста дьявола">
+                alt="Фотография моста дьявола.">
               <div class="features-wrapper">
                 <h3 class="features-title features-title-white features-title-line">Там есть мост дьявола</h3>
                 <p class="features-description features-description-white">Да, по нему можно пройти! Если вы осмелитесь,
@@ -153,7 +155,7 @@
           <h2 class="page-footer-social visually-hidden">Список соцсетей</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="button" href="https://vk.com/htmlacademy">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
                 <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
@@ -163,7 +165,7 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="https://t.me/htmlacademy ">
+              <a class="footer-social-link" href="https://t.me/htmlacademy ">
                 <svg class="footer-icon" aria-hidden="true" focusable="false" width="18" height="16" viewBox="0 0 19 16"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -173,7 +175,7 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
                 <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="18" viewBox="0 0 23 18"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
